--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,11 @@
         "atencion": "Attention",
         "buscar": "Search",
         "cancelar": "Cancel",
-        "aceptar": "Accept"
+        "aceptar": "Accept",
+        "nombre":"Name",
+        "activo":"Active",
+        "archivo_seleccionado": "Selected file",
+        "crear": "Create"
     },
     "historial_registro": {
         "titulo": "History of accreditation records and high quality of the Academic Project",
@@ -202,5 +206,19 @@
         "coordinador_asignado": "Coordinator assigned Correctly!",
         "seguro_continuar_asignar": "Are you sure you assign this coordinator to this academic project?",
         "tag_asigcoordinador": "Coordinator Assignment"
+    },
+    "enfasis": {
+        "enfasis": "Emphasys",
+        "seguro_continuar_registrar_enfasis": "Are you sure you want to register this emphasys?",
+        "enfasis_creado": "Emphasys created",
+        "enfasis_no_creado": "Emphasys not created",
+        "seguro_continuar_eliminar_enfasis": "Are you sure you want to delete this emphasys?",
+        "enfasis_eliminado": "Emphasys deleted",
+        "enfasis_no_eliminado": "Emphasys not deleted",
+        "seguro_continuar_actualizar_enfasis": "Are you sure you want to update this emphasys?",
+        "enfasis_actualizado": "Emphasys updated",
+        "enfasis_no_actualizado": "Emphasys not updated",
+        "administrar_enfasis": "Administrate emphasys",
+        "error_enfasis_ya_existe": "The emphasys is already added"
     }
 }
