feat: sga_documentacion: issue #33 terminado

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,8 @@
         "placeholder_codigo_abreviacion": "E.g.: ACADE",
         "regresar": "Return",
         "guardar": "Save",
-        "actualizar":"Update"
+        "actualizar":"Update",
+        "eliminar": "Delete"
 
     },
     "historial_registro": {
