--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,7 +19,8 @@
         "placeholder_numero_orden": "ej: 1,2,3",
         "regresar": "Regresar",
         "guardar": "Guardar",
-        "actualizar":"Actualizar"
+        "actualizar":"Actualizar",
+        "eliminar": "Eliminar"
     },
     "historial_registro": {
         "titulo": "Histórico de registros de acreditación y alta calidad del proyecto curricular",
