feat: udistrital/sga_documentacion#96 tipando y refactorizando el codigo del modulo de lista proyecto academico

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -68,7 +68,7 @@
         "ano_resolucion_proyecto": "Año resolución:",
         "text_document": "Documento de la resolución:",
         "btn_document": "Documento",
-        "fecha_creacion": "Fecha de creación:",
+        "fecha_creacion": "Fecha de creación",
         "fecha_vigencia": "Vigencia registro:",
         "text_vigencia": "Vigencia de registro vence el:",
         "acto": "Acto administrativo por medio del cual se crea el proyecto curricular por parte  del Consejo Superior Universitario",
