feat: udistrital/sga_documentacion#142 Modificación de los componentes para asegurar reactividad en los mismos

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,8 +20,8 @@
         "regresar": "Return",
         "guardar": "Save",
         "actualizar":"Update",
-        "eliminar": "Delete"
-
+        "eliminar": "Delete",
+        "registrar": "Register"
     },
     "historial_registro": {
         "titulo": "History of accreditation records and high quality of the Academic Project",
