--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -20,7 +20,8 @@
         "regresar": "Regresar",
         "guardar": "Guardar",
         "actualizar":"Actualizar",
-        "eliminar": "Eliminar"
+        "eliminar": "Eliminar",
+        "registrar": "Registrar"
     },
     "historial_registro": {
         "titulo": "Histórico de registros de acreditación y alta calidad del proyecto curricular",
