feat: Actualizar traducciones de inhabilitar y habilitar en archivos de idioma udistrital/sga_documentacion#256

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,7 +169,8 @@
         "calidad": "High quality expiration",
         "consulta": "Query",
         "editar": "Edit",
-        "inhabilitar": "Disable/ Enable",
+        "inhabilitar": "Disable",
+        "habilitar": "Enable",
         "titulo_consulta": "Basic Information of the Academic Project",
         "historico": "Historical Records",
         "masinfomacion": "More information",
