--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -169,7 +169,8 @@
         "calidad": "Vencimiento alta calidad",
         "consulta": "Consulta",
         "editar": "Editar",
-        "inhabilitar": "Inhabilitar / Habilitar",
+        "inhabilitar": "Inhabilitar",
+        "habilitar": "Habilitar",
         "titulo_consulta": "Información básica del proyecto curricular",
         "historico": "Histórico registros",
         "masinfomacion": "Más información",
