--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,10 @@
         "guardar": "Save",
         "actualizar":"Update",
         "eliminar": "Delete",
-        "registrar": "Register"
+        "registrar": "Register",
+        "seleccionar":"Select",
+        "si": "Yes",
+        "no": "No"
     },
     "historial_registro": {
         "titulo": "History of accreditation records and high quality of the Academic Project",
