--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,7 +21,10 @@
         "guardar": "Guardar",
         "actualizar":"Actualizar",
         "eliminar": "Eliminar",
-        "registrar": "Registrar"
+        "registrar": "Registrar",
+        "seleccionar":"Seleccionar",
+        "si": "Si",
+        "no": "No"
     },
     "historial_registro": {
         "titulo": "Histórico de registros de acreditación y alta calidad del proyecto curricular",
@@ -85,7 +88,7 @@
         "enfasis_proyecto": "Nombre del énfasis:",
         "registro_proyecto": "Registro del proyecto curricular",
         "erro_codigo": "Por favor ingrese el código del proyecto, debe contener de 3 a 6 dígitos y solo números",
-        "erro_codigoSnies": "Por favor ingrese el codigo SNIES, debe contener máximo 10 caracteres",
+        "erro_codigoSnies": "Por favor ingrese el código SNIES, debe contener máximo 10 caracteres",
         "erro_nombre": "Por favor ingrese el nombre del proyecto.",
         "erro_meto": "Por favor seleccione la metodología del proyecto!",
         "erro_abre": "Por favor ingrese la abreviación del proyecto.",
@@ -101,8 +104,8 @@
         "erro_selec_area": "Por favor seleccione el área de conocimiento!",
         "erro_selec_nucleo": "Por favor seleccione el núcleo base conocimiento!",
         "erro_nivel": "Por favor seleccione el nivel de formación!",
-        "erro_reso": "Por favor ingrese la resolución, solo número y máximo 8 dígitos!",
-        "erro_ano": "Por favor ingrese el año de la resolución, solo número y máximo 4 dígitos!",
+        "erro_reso": "Por favor ingrese la resolución, ¡solo número y máximo 8 dígitos!",
+        "erro_ano": "Por favor ingrese el año de la resolución, ¡solo número y máximo 4 dígitos!",
         "erro_acto": "Por favor ingrese el número del acto administrativo!",
         "erro_ano_acto": "Por favor ingrese el año del acto administrativo!",
         "erro_titu_snies": "Por favor ingrese la titulación del SNIES!",
@@ -116,8 +119,8 @@
         "mensaje": " Este módulo le permite el registro de un nuevo proyecto curricular o crear uno a partir de un proyecto curricular que tengan características similares, para poder realizar el registro deberá tener a la mano la evidencia del acto administrativo, por favor ingrese la información solicitada.",
         "vigencia": "Vigencia del registro:",
         "vigencia_mes": "# Meses de vigencia",
-        "erro_mes_vigencia": "Por favor ingrese el número de meses, número máximo permitido 99!",
-        "erro_ano_vigencia": "Por favor ingrese el número de años, número máximo permitido 99!",
+        "erro_mes_vigencia": "Por favor ingrese el número de meses, ¡número máximo permitido 99!",
+        "erro_ano_vigencia": "Por favor ingrese el número de años, ¡número máximo permitido 99!",
         "vigencia_año": "# Años de vigencia",
         "fecha_calculada_vencimiento": "El registro se vence el:",
         "proyecto_no_cargado": "Proyecto no cargado",
@@ -128,7 +131,7 @@
         "mensaje_oikos": "Por favor relacione el proyecto curricular con el espacio físico del sistema OIKOS, si no existe el espacio físico por favor notificar al administrador del sistema",
         "oikos": "Espacio Físico",
         "erro_selec": "Por favor seleccione la facultad!",
-        "erro_oikos": "Por favor seleccione el espacio fisico!",
+        "erro_oikos": "Por favor seleccione el espacio físico!",
         "informar_select": "Seleccione el énfasis de la lista a continuación; si no existe, crearlo en el botón de administrar énfasis."        
     },
     "ERROR": {
@@ -157,7 +160,7 @@
     },
     "consultaproyecto": {
         "titulo": "Consulta de un proyecto curricular ",
-        "explicacacion": "Este módulo le permite la consulta de un proyecto curricular existente en la Universidad Distrital, de igual manera, permite realizar una modificación sencilla o completa de un proyecto curricular, también se puede registrar un proyecto curricular a partir del un proyecto similar permitirá inhabilitar un proyecto curricular, por favor ingrese la información solicitada.",
+        "explicacacion": "Este módulo le permite la consulta de un proyecto curricular existente en la Universidad Distrital, de igual manera, permite realizar una modificación sencilla o completa de un proyecto curricular, también se puede registrar un proyecto curricular a partir de un proyecto similar permitirá inhabilitar un proyecto curricular, por favor ingrese la información solicitada.",
         "id": "Id",
         "facultad": "Facultad",
         "nombre": "Nombre proyecto",
@@ -190,7 +193,7 @@
         "clonar_proyecto": "Clonar proyecto",
         "buscar_en_toda_la_tabla":"Buscar en toda la tabla",
         "acciones":"Acciones",
-        "no_se_encontro_informacion_con": "No se encontro información con",
+        "no_se_encontro_informacion_con": "No se encontró información con",
         "nombre_proyecto": "Nombre proyecto",
         "nivel_proyecto": "Nivel proyecto",
         "cod_snies": "Código SNIES",
@@ -198,11 +201,11 @@
         "vencimiento_alta_calidad": "Vencimiento alta calidad"
     },
     "lista": {
-        "elementos_por_pagina": "Elementos por pagina"
+        "elementos_por_pagina": "Elementos por página"
     },
     "editarproyecto": {
         "coordinacion": "Coordinación",
-        "tag_informacionbasica": "Información basica ",
+        "tag_informacionbasica": "Información básica ",
         "tag_registro": "Registro calificado y de alta calidad ",
         "tag_acta": "Acto administrativo ",
         "registro_alta": "Registro de alta calidad",
